# Nil-RAG

./: README.md  main.py  pyproject.toml  requirements.txt  streamlit_app.py
data/: chunks.json
prompts/: query_rewrite.txt  rag_prompt.txt
src/: bm25.py  chatbot.py  client.py  config.py  conversation_store.py  embedding.py  indexer.py  ingest.py  llm.py  loader.py  logger.py  memory.py  redis_memory.py  reranker.py  retriever.py  splitter.py  vector_store.py
src/api/: main.py
src/utils/: chunk_store.py  prompt_loader.py
src/utlis/: logger.py  prompt_loader.py
