[project]
name = "krishnaikrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.3.0",
    "langchain>=1.3.13",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "openai>=2.45.0",
    "pinecone>=9.1.0",
    "pymupdf>=1.28.0",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.6.0",
    "tiktoken>=0.13.0",
    "streamlit>=1.40.0",
    "fastapi>=0.115.0",
    "uvicorn",
    "httpx>=0.28.0",
]
